# public/docs/swagger.yaml
@@ -1,4 +1,4 @@
-openapi: 3.0.0
+openapi: 3.1.0
 info:
   title: Archetype API
   version: 1.0.0
@@ -52,6 +52,7 @@ paths:
           $ref: "#/components/responses/NotFound"
         "500":
           $ref: "#/components/responses/ServerError"
+
   /archetypes/by-trait/{trait}:
     get:
       summary: Get archetypes by trait
@@ -94,7 +95,7 @@ paths:
           description: The order to filter archetypes by
       responses:
         "200":
-          description: A list of archetypes with the specified trait
+          description: A list of archetypes with the specified order
           content:
             application/json:
               schema:
@@ -118,10 +119,10 @@ paths:
           required: true
           schema:
             type: string
-          description: The order to filter archetypes by
+          description: The thirdEye gemstone to filter archetypes by
       responses:
         "200":
-          description: A list of archetypes with the specified trait
+          description: A list of archetypes with the specified thirdEye gemstone
           content:
             application/json:
               schema:
@@ -214,6 +215,87 @@ paths:
         "500":
           $ref: "#/components/responses/ServerError"
 
+  /archetypes/{name}/history:
+    get:
+      summary: Get historical examples for an archetype
+      operationId: getArchetypeHistoricalExamples
+      tags:
+        - Archetypes
+      parameters:
+        - in: path
+          name: name
+          required: true
+          schema:
+            type: string
+          description: Name of the archetype
+      responses:
+        "200":
+          description: Historical examples for the archetype
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/HistoricalExample"
+        "404":
+          $ref: "#/components/responses/NotFound"
+        "500":
+          $ref: "#/components/responses/ServerError"
+
+  /archetypes/{name}/mythology:
+    get:
+      summary: Get mythological references for an archetype
+      operationId: getArchetypeMythologicalReferences
+      tags:
+        - Archetypes
+      parameters:
+        - in: path
+          name: name
+          required: true
+          schema:
+            type: string
+          description: Name of the archetype
+      responses:
+        "200":
+          description: Mythological references for the archetype
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/MythologicalReference"
+        "404":
+          $ref: "#/components/responses/NotFound"
+        "500":
+          $ref: "#/components/responses/ServerError"
+
+  /archetypes/{name}/applications:
+    get:
+      summary: Get practical applications for an archetype
+      operationId: getArchetypePracticalApplications
+      tags:
+        - Archetypes
+      parameters:
+        - in: path
+          name: name
+          required: true
+          schema:
+            type: string
+          description: Name of the archetype
+      responses:
+        "200":
+          description: Practical applications for the archetype
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: string
+        "404":
+          $ref: "#/components/responses/NotFound"
+        "500":
+          $ref: "#/components/responses/ServerError"
+
 components:
   schemas:
     Archetype:
@@ -229,6 +311,8 @@ components:
         name:
           type: string
         motto:
+          type: string
+        mission:
           type: string
         color:
           type: string
@@ -265,14 +349,42 @@ components:
           type: array
           items:
             type: string
-        ratings:
-          type: object
-          additionalProperties:
-            type: integer
+        historicalExamples:
+          type: array
+          items:
+            $ref: "#/components/schemas/HistoricalExample"
+        mythologicalReferences:
+          type: array
+          items:
+            $ref: "#/components/schemas/MythologicalReference"
+        practicalApplications:
+          type: array
+          items:
+            type: string
         characteristics:
           type: object
           additionalProperties:
             type: number
+        ratings:
+          type: object
+          additionalProperties:
+            type: integer
+
+    HistoricalExample:
+      type: object
+      properties:
+        name:
+          type: string
+        description:
+          type: string
+
+    MythologicalReference:
+      type: object
+      properties:
+        name:
+          type: string
+        description:
+          type: string
 
   responses:
     NotFound:
